--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,11 +1,5 @@
 name: anbox
-version: 4
-version-script: |
-  if [ "$SNAPCRAFT_GRADE" = "stable" ]; then
-    echo $SNAPCRAFT_PROJECT_VERSION
-  else
-    echo $SNAPCRAFT_PROJECT_VERSION-$(git rev-parse --short HEAD)
-  fi
+version: git
 summary: Android in a Box
 description: |
   Runtime for Android applications which runs a full Android system
@@ -13,6 +7,7 @@ description: |
   separate the Android system fully from the host.
 confinement: devmode
 grade: devel
+base: core18
 architectures: [amd64]
 
 slots:
@@ -139,6 +134,15 @@ parts:
     prime:
       - android.img
 
+  desktop-glib-only:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-subdir: glib-only
+    plugin: make
+    build-packages:
+      - libglib2.0-dev
+    stage-packages:
+      - libglib2.0-bin
+
   apparmor:
     plugin: nil
     stage-packages:
@@ -205,15 +209,8 @@ parts:
     source: https://swiftshader.googlesource.com/SwiftShader
     source-type: git
     # Last upstream version which doesn't make use of newer cmake features we can't
-    # support on 16.04
+    # support on 18.04
     source-commit: 1f456938b36f02404830c2e831e328d8ba8d30cd
-    override-build: |
-      git submodule update --init
-      snapcraftctl build
-    artifacts:
-      - libEGL.so
-      - libGLES_CM.so
-      - libGLESv2.so
     organize:
       libEGL.so: lib/anbox/swiftshader/libEGL.so
       libGLES_CM.so: lib/anbox/swiftshader/libGLES_CM.so
@@ -292,14 +289,17 @@ parts:
       - pkg-config
       - protobuf-compiler
     stage-packages:
-      - libboost-log1.58.0
-      - libboost-iostreams1.58.0
-      - libboost-program-options1.58.0
-      - libboost-thread1.58.0
+      - libboost-filesystem1.65.1
+      - libboost-iostreams1.65.1
+      - libboost-log1.65.1
+      - libboost-program-options1.65.1
+      - libboost-system1.65.1
+      - libboost-thread1.65.1
       - libdb5.3
       - libegl1-mesa
-      - libgles2-mesa
       - libgl1-mesa-glx
+      - libgles2-mesa
+      - libprotobuf-lite10
       - libsdl2-2.0-0
       - libsdl2-gfx-1.0-0
       - libsdl2-image-2.0-0
